@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.614 2010-10-13 00:36:55 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.615 2010-10-13 23:08:05 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -520,7 +520,7 @@ You can also retrieve the source of tagged versions directly
 world peace?
 <li><b>NCO 4.0.5</b>: (<i>In progress</i>)
 netCDF4 compound types?;
-Fix <tt>ncks</tt> <a href="#bug_ncks_cnk">chunking bug</a>;
+Fix <tt>ncks</tt> <a href="#bug_ncks_nc4_nc4_hyp_fix">chunking bug</a>;
 Fix <tt>ncra</tt> <a href="#bug_ncra_cf_crd">CF "coordinate" bug</a>;
 Stride works with DAP;
 <li><b>NCO 4.0.4</b>:
@@ -1436,9 +1436,10 @@ these versions of NCO.
 </ul>
 
 <ul><b>Operator-specific Run-time Problems:</b>
-<!-- http://nco.sf.net#bug_ncra_cf_crd -->
-<a name="bug_ncra_cf_crd"></a>
-<li><i><tt>ncra</tt> CF "coordinate" bug:</i>
+<!-- http://nco.sf.net#bug_ncra_cf_crd_rec_crd -->
+<a name="bug_ncra_cf_crd_rec_crd"></a>
+<li><i><tt>ncra</tt> bug handling CF <tt>coordinates</tt> attributes   
+that contain the name of the record coordinate:</i>
 Versions 4.0.3&mdash;4.0.4 of <tt>ncra</tt> incorrectly treat the
 record variable (usually <tt>time</tt>) as a fixed variable if it 
 is specified in the <tt>coordinates</tt> attribute of any variable in
@@ -1449,21 +1450,22 @@ creating imaginary time slices in the ouput.
 One workaround that does not require NCO upgrades is to remove the
 record coordinate name (usually <tt>time</tt>) from
 the <tt>coordinates</tt> attribute of all variables in CF-compliant
-files before applying <tt>ncra</tt> to the file.
+files before processing the file with <tt>ncra</tt>.
 
-<!-- http://nco.sf.net#bug_ncks_cnk -->
-<a name="bug_ncks_cnk"></a>
-<li><i><tt>ncks</tt> chunking bug:</i>
+<!-- http://nco.sf.net#bug_ncks_nc4_nc4_hyp_fix -->
+<a name="bug_ncks_nc4_nc4_hyp_fix"></a>
+<li><i><tt>ncks</tt> bug hyperslabbinging fixed netCDF4 dimensions:</i>
 Versions 4.0.3&mdash;4.0.4 of <tt>ncks</tt> contain a bug which
 triggers a core-dump when hyperslabbing (along a non-record
-dimension) a netCDF4-format input file into a netCDF4-format output
+dimension) a netCDF4-format input file into a netCDF4-format output 
 file, e.g., <tt>ncks -d 0,1,lat in4.nc out4.nc</tt>. 
-Two workarounds that do not require NCO upgrades (or downgrades) are
+Three workarounds that do not require NCO upgrades (or downgrades) are 
 to explicitly specify chunking with, e.g., 
 <tt>ncks --cnk_plc=all -d 0,1,lat in4.nc out4.nc</tt>, or, to use 
 <tt>ncea</tt> instead of <tt>ncks</tt> for hyperslabbing, e.g.,
 <tt>ncea -d 0,1,lat in4.nc out4.nc</tt> (<tt>ncea</tt> does a no-op
-when there is only one input file).
+when there is only one input file), or to write to a netCDF3 file,
+<tt>ncks -3 -d 0,1,lat in4.nc out3.nc</tt>.
 
 <!-- http://nco.sf.net#bug_ncrename_dot -->
 <a name="bug_ncrename_dot"></a>
