@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_sng_utl.c,v 1.32 2010-10-09 05:51:46 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_sng_utl.c,v 1.33 2010-10-13 23:08:05 zender Exp $ */
 
 /* Purpose: String utilities */
 
@@ -142,10 +142,11 @@ sng_ascii_trn /* [fnc] Replace C language '\X' escape codes in string with ASCII
     case '\"': *backslash_ptr='\"'; break; /* Unsure why or if this works! */
     case '0':	
       /* Translating \0 to NUL makes subsequent portion of input string invisible to all string functions */
-      *backslash_ptr='\0'; /* 000   0     00    NUL '\0' */
-      (void)fprintf(stderr,"%s: WARNING translating C language escape code \"\\0\" found in user-supplied string to NUL. This will make the subsequent portion of the string, if any, invisible to C standard library string functions. And that may cause unintended consequences.\n",prg_nm_get());
-      /* (void)fprintf(stderr,"%s: WARNING C language escape code %.2s found in string, not translating to NUL since this would make the rest of the string invisible to all string functions\n",prg_nm_get(),backslash_ptr); */
-      /*	 trn_flg=False;*/
+      (void)fprintf(stderr,"%s: WARNING C language escape code %.2s found in string, not translating to NUL since this would make the subsequent portion of the string invisible to all C Standard Library string functions\n",prg_nm_get(),backslash_ptr); 
+      trn_flg=False;
+      /* 20101013: Tried changing above behavior to following, and it opened a Hornet's nest of problems... */
+      /* *backslash_ptr='\0'; *//* 000   0     00    NUL '\0' */
+      /*      (void)fprintf(stderr,"%s: WARNING translating C language escape code \"\\0\" found in user-supplied string to NUL. This will make the subsequent portion of the string, if any, invisible to C Standard Library string functions. And that may cause unintended consequences.\n",prg_nm_get());*/
       break;
     default: 
       (void)fprintf(stderr,"%s: WARNING No ASCII equivalent to possible C language escape code %.2s so no action taken\n",prg_nm_get(),backslash_ptr);
